--- a/scss/moove.scss
+++ b/scss/moove.scss
@@ -25,3 +25,6 @@
 @import "moove/accessibilitybar";
 @import "moove/mixins/accessibilityfontsize";
 @import "moove/accessibilitystyles";
+
+@import "evoke/general";
+@import "evoke/typography";
