Adjust color mint

--- a/scss/evoke/general.scss
+++ b/scss/evoke/general.scss
@@ -4,7 +4,7 @@ $whale: #498eb3 !default;
 $night: #27c0e3 !default;
 $rhubarb: #ff6666 !default;
 $evoke: #ff0540 !default;
-$brightmint: #00f0a6 !default;
+$brightmint: #00e6a6 !default;
 $forestgreen: #153213 !default;
 $poisonousgreen: #b8f907 !default;
 $brightblue: #3329ff !default;
