--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -93,11 +93,9 @@
 
 <div class="my-1 my-sm-5"></div>
 
-{{# logourl }}
-    <div class="row justify-content-center logo">
-        <img src="{{logourl}}" title="{{sitename}}" alt="{{sitename}}"/>
-    </div>
-{{/ logourl }}
+<div class="row justify-content-center logo">
+    <img src="{{config.wwwroot}}/theme/moove/pix/login_logo.png" title="{{sitename}}" alt="{{sitename}}"/>
+</div>
 
 <div class="row justify-content-center my-4">
 <div class="col-12 col-md-12 col-lg-8">
@@ -119,50 +117,13 @@
 
         <div class="row">
             <div class="col-md-7 instructions">
-                <h2>{{sitename}}</h2>
-                <hr align="left" />
+                <h2>EVOKE CORE</h2>
 
                 <div class="m-t-1">
                     <i class="fa fa-check-circle-o"></i>
                     {{#str}} cookiesenabled {{/str}}
                     {{{cookieshelpiconformatted}}}
                 </div>
-
-                {{#canloginasguest}}
-                    <div class="m-t-2">
-                        <p><i class="fa fa-user-circle-o"></i> {{#str}}someallowguest{{/str}}</p>
-                        <form action="{{loginurl}}" method="post" id="guestlogin">
-                            <input type = "hidden" name = "logintoken" value = "{{logintoken}}">
-                            <input type="hidden" name="username" value="guest" />
-                            <input type="hidden" name="password" value="guest" />   
-                            <input type="hidden" name="logintoken" value="{{logintoken}}">
-                            <button class="btn btn-secondary" type="submit">{{#str}}loginguest{{/str}}</button>
-                        </form>
-                    </div>
-                {{/canloginasguest}}
-
-                {{#hasidentityproviders}}
-                    <h3 class="m-t-1">{{#str}} potentialidps, auth {{/str}}</h3>
-                    <div class="potentialidplist" class="m-t-1">
-                        {{#identityproviders}}
-                            <div class="potentialidp">
-                                <a href="{{{url}}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary">
-                                    {{#iconurl}}
-                                        <img src="{{iconurl}}" alt="" width="24" height="24"/>
-                                    {{/iconurl}}
-                                    {{name}}
-                                </a>
-                            </div>
-                        {{/identityproviders}}
-                    </div>
-                {{/hasidentityproviders}}
-
-                {{^hasidentityproviders}}
-                    {{#hasinstructions}}
-                        <h3 class="m-t-1">{{#str}}firsttime{{/str}}</h3>
-                        <div>{{{instructions}}}</div>
-                    {{/hasinstructions}}
-                {{/hasidentityproviders}}
             </div>
 
             <div class="col-md-5 form">
