--- a/scss/evoke/general.scss
+++ b/scss/evoke/general.scss
@@ -208,6 +208,7 @@ nav.navbar {
   color: #fff;
 
   &:hover {
+    color: #fff;
     background-color: darken($whale, 10);
     border-color: darken($whale, 10);
   }
@@ -244,6 +245,11 @@ nav.navbar {
     background-color: initial;
 
     li {
+      .no-link {
+        background-color: initial;
+        border-color: initial;
+      }
+
       &:first-of-type > * {
         padding-left: 0;
       }
