--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -93,9 +93,11 @@
 
 <div class="my-1 my-sm-5"></div>
 
-<div class="row justify-content-center logo">
-    <img src="{{config.wwwroot}}/theme/moove/pix/login_logo.png" title="{{sitename}}" alt="{{sitename}}"/>
-</div>
+{{# logourl }}
+    <div class="row justify-content-center logo">
+        <img src="{{logourl}}" title="{{sitename}}" alt="{{sitename}}"/>
+    </div>
+{{/ logourl }}
 
 <div class="row justify-content-center my-4">
 <div class="col-12 col-md-12 col-lg-8">
