--- a/scss/evoke/general.scss
+++ b/scss/evoke/general.scss
@@ -317,6 +317,12 @@ nav.navbar {
       &[data-key="portfolios"] a:before {
         content: "\e04b";
       }
+      &[data-key="chatincourse"] a:before {
+        content: "\e07d";
+      }
+      &[data-key="superpowers"] a:before {
+        content: "\e006";
+      }
     }
   }
 }
