Improve header title and breadcrumb

--- a/scss/evoke/general.scss
+++ b/scss/evoke/general.scss
@@ -254,8 +254,6 @@ nav.navbar {
     background-color: initial;
 
     li {
-      display: none;
-
       .no-link {
         background-color: initial;
         border-color: initial;
@@ -263,10 +261,6 @@ nav.navbar {
 
       &:first-of-type > * {
         padding-left: 0;
-      }
-
-      &:last-of-type {
-        display: inline-block;
       }
 
       &:last-of-type > * {
@@ -328,6 +322,16 @@ nav.navbar {
       }
     }
   }
+}
+
+.evoke-breadcrumbs .singlebutton {
+  margin-right: 40px;
+}
+
+.evoke-settings-menu {
+  position: absolute;
+  right: 17px;
+  top: 75px;
 }
 
 @media (min-width: 1200px) {
