--- a/templates/core/full_header.mustache
+++ b/templates/core/full_header.mustache
@@ -28,42 +28,28 @@
         "courseheader": "course_header_html"
     }
 }}
-<header id="page-header" class="row">
-    <div class="col-12 pt-3 pb-3">
-        <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
-            <div class="card-body {{^contextheader}}p-2{{/contextheader}}">
-                <div class="d-flex align-items-center">
-                    {{#contextheader}}
-                    <div class="mr-auto">
-                        {{{contextheader}}}
-                    </div>
-                    {{/contextheader}}
-
-                    {{#settingsmenu}}
-                    <div class="context-header-settings-menu">
-                        {{{settingsmenu}}}
-                    </div>
-                    {{/settingsmenu}}
-                    <div class="header-actions-container flex-shrink-0" data-region="header-actions-container">
-                        {{#headeractions}}
-                            <div class="header-action ml-2">{{{.}}}</div>
-                        {{/headeractions}}
-                    </div>
-                </div>
-                <div class="d-flex flex-wrap">
-                    {{#hasnavbar}}
-                    <div id="page-navbar">
-                        {{{navbar}}}
-                    </div>
-                    {{/hasnavbar}}
-                    <div class="ml-auto d-flex">
-                        {{{pageheadingbutton}}}
-                    </div>
-                    <div id="course-header">
-                        {{{courseheader}}}
-                    </div>
-                </div>
-            </div>
-        </div>
+{{#settingsmenu}}
+    <div class="context-header-settings-menu evoke-settings-menu">
+        {{{settingsmenu}}}
     </div>
-</header>
+{{/settingsmenu}}
+
+{{#headeractions}}
+    <div class="header-actions-container flex-shrink-0" data-region="header-actions-container">
+        <div class="header-action ml-2">{{{.}}}</div>
+    </div>
+{{/headeractions}}
+
+<div class="d-flex flex-wrap evoke-breadcrumbs">
+    {{#hasnavbar}}
+        <div id="page-navbar">
+            {{{navbar}}}
+        </div>
+    {{/hasnavbar}}
+    <div class="ml-auto d-flex">
+        {{{pageheadingbutton}}}
+    </div>
+    <div id="course-header">
+        {{{courseheader}}}
+    </div>
+</div>
