Modify theme to work with evoke game instead of block game

--- a/scss/evoke/game.scss
+++ b/scss/evoke/game.scss
@@ -45,14 +45,7 @@
       }
 
       .icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        width: 42px;
-        height: 42px;
-        background-color: #fff;
-        border-radius: 20px;
+        navigation
 
         .evocoin {
           width: 28px;
