Displays game info in navbar

--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -46,6 +46,9 @@
         {{/ output.get_logo }}
     </a>
 
+    <!-- evokegame_dashboardnav -->
+    {{{ output.evokegame_dashboardnavbar }}}
+
     <ul class="navbar-nav d-none d-md-flex custom-menus">
         <!-- custom_menu -->
         {{{ output.custom_menu }}}
