Changes user menu links to evoke game profile

--- a/scss/evoke/typography.scss
+++ b/scss/evoke/typography.scss
@@ -1,5 +1,5 @@
-$font-family-body: "Roboto", sans-serif, !default;
-$font-family-headings: "Bungee", cursive, !default;
+$font-family-body: "Roboto", sans-serif !default;
+$font-family-headings: "Bungee", cursive !default;
 
 h1,
 .h1,
