--- a/scss/moove/_general.scss
+++ b/scss/moove/_general.scss
@@ -29,7 +29,7 @@ h5,
 h6,
 .h6 {
     color: $headings-color;
-    font-family: "Poppins", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: $headings-font-weight;
 }
 
