Fixes css of notifications page

--- a/scss/evoke/general.scss
+++ b/scss/evoke/general.scss
@@ -334,6 +334,10 @@ nav.navbar {
   top: 75px;
 }
 
+.notification-area .content-area .header .image-container {
+  display: flex;
+}
+
 @media (min-width: 1200px) {
   .pagelayout-incourse {
     #page {
