Add right Bangers font to the theme

--- a/scss/evoke/game.scss
+++ b/scss/evoke/game.scss
@@ -111,7 +111,7 @@
 
     .username {
       font-size: 28px;
-      font-family: "Bungee", cursive;
+      font-family: "Bangers", cursive;
       margin-right: 100px;
     }
 
@@ -126,7 +126,7 @@
 
 #page-blocks-game-rank_game {
   .table {
-    font-family: "Bungee", cursive;
+    font-family: "Bangers", cursive;
   }
 
   .thead-dark th {
